# CeCe-cli

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  Simulator.cpp  appveyor.yml  cli.project  main.cpp  version.hpp.in
resources/: descriptor.json.in
scripts/ci/: after_build-win32.bat  deploy.sh  install-linux.sh  install-osx.sh  install-win32.bat
src/: Arguments.cpp  Arguments.hpp  Image.cpp  Simulator.cpp  Simulator.hpp  config.hpp.in  main.cpp  version.rc
